--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">ContactsApp</string>
     <string name="no_permissions">You don\'t have the necessary permissions, you can get in the settings</string>
     <string name="go_to_settings">Go to settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_starred_label">Favorites</string>
+    <string name="text_contacts_label">Contacts</string>
 
 </resources>
